<package>
  <name>pr2_description</name>
  <version>1.11.14</version>
  <description>This package contains the description (mechanical, kinematic, visual,
  etc.) of the PR2 robot.  The files in this package are parsed and used by
  a variety of other components.  Most users will not interact directly
  with this package.</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_description</url>
  <url type="bugtracker">https://github.com/PR2/pr2_common/issues</url>

  <author>John Hsu</author>
  <author>Eric Berger</author>
  <author>Austin Hendrix</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>convex_decomposition</build_depend>
  <build_depend>ivcon</build_depend>

  <run_depend>xacro</run_depend>

  <test_depend>gtest</test_depend>
  <test_depend>liburdfdom-dev</test_depend>
  <!-- <test_depend>urdfdom</test_depend> As of Indigo this is a system deb at liburdfdom-dev -->
</package>
